F827G: Update decompiled by jadx 1.3.2