@@ -10,11 +10,11 @@ import android.os.Message;
 import android.os.Registrant;
 import android.os.RegistrantList;
 import android.os.SystemProperties;
-import android.provider.Settings.SettingNotFoundException;
+import android.provider.Settings;
 import android.telephony.Rlog;
 import android.telephony.SubscriptionInfo;
 import android.telephony.TelephonyManager;
-import com.android.internal.telephony.RIL.UnsolOemHookBuffer;
+import com.android.internal.telephony.RIL;
 import com.android.internal.telephony.uicc.IccUtils;
 import com.android.internal.telephony.uicc.UiccController;
 import java.nio.ByteBuffer;
@@ -24,6 +24,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 
+/* loaded from: C:\Users\SampP\Desktop\oat2dex-python\boot.oat.0x1348340.odex */
 public class ModemStackController extends Handler {
     private static final int BIND_TO_STACK = 1;
     private static final int CMD_DEACTIVATE_ALL_SUBS = 1;
@@ -52,29 +53,30 @@ public class ModemStackController extends Handler {
     private static final int SUCCESS = 1;
     private static final int UNBIND_TO_STACK = 0;
     private static ModemStackController sModemStackController;
-    private int mActiveSubCount = 0;
     private CommandsInterface[] mCi;
-    private boolean[] mCmdFailed = new boolean[this.mNumPhones];
     private Context mContext;
-    private int[] mCurrentStackId = new int[this.mNumPhones];
-    private boolean mDeactivationInProgress = false;
-    private int mDeactivedSubCount = 0;
-    private boolean mIsPhoneInEcbmMode = false;
-    private boolean mIsRecoveryInProgress = false;
-    private boolean mIsStackReady = false;
-    private ModemCapabilityInfo[] mModemCapInfo = null;
-    private RegistrantList mModemDataCapsAvailableRegistrants = new RegistrantList();
-    private boolean mModemRatCapabilitiesAvailable = false;
-    private RegistrantList mModemRatCapsAvailableRegistrants = new RegistrantList();
+    private boolean mIsStackReady;
+    private ModemCapabilityInfo[] mModemCapInfo;
+    private Message mUpdateStackMsg;
     private int mNumPhones = TelephonyManager.getDefault().getPhoneCount();
-    private int[] mPrefNwMode = new int[this.mNumPhones];
+    private int mActiveSubCount = 0;
+    private int mDeactivedSubCount = 0;
     private int[] mPreferredStackId = new int[this.mNumPhones];
-    private BroadcastReceiver mReceiver = new BroadcastReceiver() {
+    private int[] mCurrentStackId = new int[this.mNumPhones];
+    private int[] mPrefNwMode = new int[this.mNumPhones];
+    private int[] mSubState = new int[this.mNumPhones];
+    private boolean mIsRecoveryInProgress = false;
+    private boolean mIsPhoneInEcbmMode = false;
+    private boolean mModemRatCapabilitiesAvailable = false;
+    private boolean mDeactivationInProgress = false;
+    private boolean[] mCmdFailed = new boolean[this.mNumPhones];
+    private RegistrantList mStackReadyRegistrants = new RegistrantList();
+    private RegistrantList mModemRatCapsAvailableRegistrants = new RegistrantList();
+    private RegistrantList mModemDataCapsAvailableRegistrants = new RegistrantList();
+    private HashMap<Integer, Integer> mSubcriptionStatus = new HashMap<>();
+    private BroadcastReceiver mReceiver = new BroadcastReceiver() { // from class: com.android.internal.telephony.ModemStackController.1
+        @Override // android.content.BroadcastReceiver
         public void onReceive(Context context, Intent intent) {
-            int intExtra;
-            int intExtra2;
-            int phoneId;
-            Message obtainMessage;
             if ("android.intent.action.EMERGENCY_CALLBACK_MODE_CHANGED".equals(intent.getAction())) {
                 if (intent.getBooleanExtra("phoneinECMState", false)) {
                     ModemStackController.this.logd("Device is in ECBM Mode");
@@ -84,66 +86,33 @@ public class ModemStackController extends Handler {
                 ModemStackController.this.logd("Device is out of ECBM Mode");
                 ModemStackController.this.mIsPhoneInEcbmMode = false;
             } else if ("android.intent.action.ACTION_SUBINFO_CONTENT_CHANGE".equals(intent.getAction())) {
-                intExtra = intent.getIntExtra("_id", -1);
-                String stringExtra = intent.getStringExtra("columnName");
-                intExtra2 = intent.getIntExtra("intContent", 0);
-                ModemStackController.this.logd("Received ACTION_SUBINFO_CONTENT_CHANGE on subId: " + intExtra + "for " + stringExtra + " intValue: " + intExtra2);
-                if (ModemStackController.this.mDeactivationInProgress && stringExtra != null && stringExtra.equals("sub_state")) {
-                    phoneId = SubscriptionController.getInstance().getPhoneId(intExtra);
-                    if (intExtra2 == 0 && ((Integer) ModemStackController.this.mSubcriptionStatus.get(Integer.valueOf(phoneId))).intValue() == 1) {
-                        obtainMessage = ModemStackController.this.obtainMessage(8, new Integer(phoneId));
-                        AsyncResult.forMessage(obtainMessage, SubscriptionStatus.SUB_DEACTIVATED, null);
-                        ModemStackController.this.sendMessage(obtainMessage);
+                int subId = intent.getIntExtra("_id", -1);
+                String column = intent.getStringExtra("columnName");
+                int intValue = intent.getIntExtra("intContent", 0);
+                ModemStackController.this.logd("Received ACTION_SUBINFO_CONTENT_CHANGE on subId: " + subId + "for " + column + " intValue: " + intValue);
+                if (ModemStackController.this.mDeactivationInProgress && column != null && column.equals("sub_state")) {
+                    int phoneId = SubscriptionController.getInstance().getPhoneId(subId);
+                    if (intValue == 0 && ((Integer) ModemStackController.this.mSubcriptionStatus.get(Integer.valueOf(phoneId))).intValue() == 1) {
+                        Message msg = ModemStackController.this.obtainMessage(8, new Integer(phoneId));
+                        AsyncResult.forMessage(msg, SubscriptionStatus.SUB_DEACTIVATED, (Throwable) null);
+                        ModemStackController.this.sendMessage(msg);
                     }
                 }
             } else if ("org.codeaurora.intent.action.ACTION_SUBSCRIPTION_SET_UICC_RESULT".equals(intent.getAction())) {
-                intExtra = intent.getIntExtra("subscription", -1);
-                phoneId = intent.getIntExtra("phone", 0);
-                intExtra2 = intent.getIntExtra("operationResult", 1);
-                ModemStackController.this.logd("Received ACTION_SUBSCRIPTION_SET_UICC_RESULT on subId: " + intExtra + "phoneId " + phoneId + " status: " + intExtra2);
-                if (ModemStackController.this.mDeactivationInProgress && intExtra2 == 1) {
-                    obtainMessage = ModemStackController.this.obtainMessage(8, new Integer(phoneId));
-                    AsyncResult.forMessage(obtainMessage, SubscriptionStatus.SUB_ACTIVATED, null);
-                    ModemStackController.this.sendMessage(obtainMessage);
+                int subId2 = intent.getIntExtra("subscription", -1);
+                int phoneId2 = intent.getIntExtra("phone", 0);
+                int status = intent.getIntExtra("operationResult", 1);
+                ModemStackController.this.logd("Received ACTION_SUBSCRIPTION_SET_UICC_RESULT on subId: " + subId2 + "phoneId " + phoneId2 + " status: " + status);
+                if (ModemStackController.this.mDeactivationInProgress && status == 1) {
+                    Message msg2 = ModemStackController.this.obtainMessage(8, new Integer(phoneId2));
+                    AsyncResult.forMessage(msg2, SubscriptionStatus.SUB_ACTIVATED, (Throwable) null);
+                    ModemStackController.this.sendMessage(msg2);
                 }
             }
         }
     };
-    private RegistrantList mStackReadyRegistrants = new RegistrantList();
-    private int[] mSubState = new int[this.mNumPhones];
-    private HashMap<Integer, Integer> mSubcriptionStatus = new HashMap();
-    private Message mUpdateStackMsg;
 
-    public class ModemCapabilityInfo {
-        private int mMaxDataCap;
-        private int mStackId;
-        private int mSupportedRatBitMask;
-        private int mVoiceDataCap;
-
-        public ModemCapabilityInfo(int i, int i2, int i3, int i4) {
-            this.mStackId = i;
-            this.mSupportedRatBitMask = i2;
-            this.mVoiceDataCap = i3;
-            this.mMaxDataCap = i4;
-        }
-
-        public int getMaxDataCap() {
-            return this.mMaxDataCap;
-        }
-
-        public int getStackId() {
-            return this.mStackId;
-        }
-
-        public int getSupportedRatBitMask() {
-            return this.mSupportedRatBitMask;
-        }
-
-        public String toString() {
-            return "[stack = " + this.mStackId + ", SuppRatBitMask = " + this.mSupportedRatBitMask + ", voiceDataCap = " + this.mVoiceDataCap + ", maxDataCap = " + this.mMaxDataCap + "]";
-        }
-    }
-
+    /* loaded from: C:\Users\SampP\Desktop\oat2dex-python\boot.oat.0x1348340.odex */
     public enum SubscriptionStatus {
         SUB_DEACTIVATE,
         SUB_ACTIVATE,
@@ -152,84 +121,45 @@ public class ModemStackController extends Handler {
         SUB_INVALID
     }
 
-    private ModemStackController(Context context, UiccController uiccController, CommandsInterface[] commandsInterfaceArr) {
-        int i;
-        logd("Constructor - Enter");
-        this.mCi = commandsInterfaceArr;
-        this.mContext = context;
-        this.mModemCapInfo = new ModemCapabilityInfo[this.mNumPhones];
-        for (i = 0; i < this.mCi.length; i++) {
-            this.mCi[i].registerForAvailable(this, 9, new Integer(i));
-            this.mCi[i].registerForModemCapEvent(this, 10, null);
-            this.mCi[i].registerForNotAvailable(this, 11, new Integer(i));
+    /* loaded from: C:\Users\SampP\Desktop\oat2dex-python\boot.oat.0x1348340.odex */
+    public class ModemCapabilityInfo {
+        private int mMaxDataCap;
+        private int mStackId;
+        private int mSupportedRatBitMask;
+        private int mVoiceDataCap;
+
+        public ModemCapabilityInfo(int stackId, int supportedRatBitMask, int voiceCap, int dataCap) {
+            ModemStackController.this = r1;
+            this.mStackId = stackId;
+            this.mSupportedRatBitMask = supportedRatBitMask;
+            this.mVoiceDataCap = voiceCap;
+            this.mMaxDataCap = dataCap;
         }
-        for (i = 0; i < this.mNumPhones; i++) {
-            this.mPreferredStackId[i] = i;
-            this.mCurrentStackId[i] = i;
-            this.mSubState[i] = 1;
-            this.mCmdFailed[i] = false;
+
+        public int getSupportedRatBitMask() {
+            return this.mSupportedRatBitMask;
         }
-        if (this.mNumPhones == 1) {
-            this.mIsStackReady = true;
+
+        public int getStackId() {
+            return this.mStackId;
         }
-        IntentFilter intentFilter = new IntentFilter("android.intent.action.EMERGENCY_CALLBACK_MODE_CHANGED");
-        intentFilter.addAction("android.intent.action.ACTION_SUBINFO_CONTENT_CHANGE");
-        intentFilter.addAction("org.codeaurora.intent.action.ACTION_SUBSCRIPTION_SET_UICC_RESULT");
-        this.mContext.registerReceiver(this.mReceiver, intentFilter);
-        logd("Constructor - Exit");
+
+        public int getMaxDataCap() {
+            return this.mMaxDataCap;
+        }
+
+        public String toString() {
+            return "[stack = " + this.mStackId + ", SuppRatBitMask = " + this.mSupportedRatBitMask + ", voiceDataCap = " + this.mVoiceDataCap + ", maxDataCap = " + this.mMaxDataCap + "]";
+        }
     }
 
-    private boolean areAllModemCapInfoReceived() {
-        for (int i = 0; i < this.mNumPhones; i++) {
-            if (this.mModemCapInfo[this.mCurrentStackId[i]] == null) {
-                return false;
-            }
+    public static ModemStackController make(Context context, UiccController uiccMgr, CommandsInterface[] ci) {
+        Rlog.d(LOG_TAG, "getInstance");
+        if (sModemStackController == null) {
+            sModemStackController = new ModemStackController(context, uiccMgr, ci);
+            return sModemStackController;
         }
-        return true;
-    }
-
-    private boolean areAllSubsinSameState(int i) {
-        for (int i2 : this.mSubState) {
-            logd("areAllSubsinSameState state= " + i + " substate=" + i2);
-            if (i2 != i) {
-                return false;
-            }
-        }
-        return true;
-    }
-
-    private void bindStackOnSub(int i) {
-        logd("bindStack " + this.mPreferredStackId[i] + " On phoneId[" + i + "]");
-        this.mCi[i].updateStackBinding(this.mPreferredStackId[i], 1, Message.obtain(this, 6, new Integer(i)));
-    }
-
-    private void deactivateAllSubscriptions() {
-        SubscriptionController instance = SubscriptionController.getInstance();
-        List<SubscriptionInfo> activeSubscriptionInfoList = instance.getActiveSubscriptionInfoList();
-        this.mActiveSubCount = 0;
-        if (activeSubscriptionInfoList == null) {
-            if (this.mUpdateStackMsg != null) {
-                sendResponseToTarget(this.mUpdateStackMsg, 2);
-                this.mUpdateStackMsg = null;
-            }
-            notifyStackReady(false);
-            return;
-        }
-        for (SubscriptionInfo subscriptionInfo : activeSubscriptionInfoList) {
-            int subState = instance.getSubState(subscriptionInfo.getSubscriptionId());
-            if (subState == 1) {
-                this.mActiveSubCount++;
-                instance.deactivateSubId(subscriptionInfo.getSubscriptionId());
-            }
-            this.mSubcriptionStatus.put(Integer.valueOf(subscriptionInfo.getSimSlotIndex()), Integer.valueOf(subState));
-        }
-        if (this.mActiveSubCount > 0) {
-            this.mDeactivedSubCount = 0;
-            this.mDeactivationInProgress = true;
-            return;
-        }
-        this.mDeactivationInProgress = false;
-        triggerUnBindingOnAllSubs();
+        throw new RuntimeException("ModemStackController.make() should only be called once");
     }
 
     public static ModemStackController getInstance() {
@@ -239,137 +169,154 @@ public class ModemStackController extends Handler {
         throw new RuntimeException("ModemStackController.getInstance called before make()");
     }
 
-    private boolean isAnyCallsInProgress() {
-        for (int i = 0; i < this.mNumPhones; i++) {
-            if (TelephonyManager.getDefault().getCallState(SubscriptionController.getInstance().getSubIdUsingPhoneId(i)) != 0) {
-                return true;
-            }
+    private ModemStackController(Context context, UiccController uiccManager, CommandsInterface[] ci) {
+        this.mIsStackReady = false;
+        this.mModemCapInfo = null;
+        logd("Constructor - Enter");
+        this.mCi = ci;
+        this.mContext = context;
+        this.mModemCapInfo = new ModemCapabilityInfo[this.mNumPhones];
+        for (int i = 0; i < this.mCi.length; i++) {
+            this.mCi[i].registerForAvailable(this, 9, new Integer(i));
+            this.mCi[i].registerForModemCapEvent(this, 10, null);
+            this.mCi[i].registerForNotAvailable(this, 11, new Integer(i));
         }
-        return false;
+        for (int i2 = 0; i2 < this.mNumPhones; i2++) {
+            this.mPreferredStackId[i2] = i2;
+            this.mCurrentStackId[i2] = i2;
+            this.mSubState[i2] = 1;
+            this.mCmdFailed[i2] = false;
+        }
+        if (this.mNumPhones == 1) {
+            this.mIsStackReady = true;
+        }
+        IntentFilter filter = new IntentFilter("android.intent.action.EMERGENCY_CALLBACK_MODE_CHANGED");
+        filter.addAction("android.intent.action.ACTION_SUBINFO_CONTENT_CHANGE");
+        filter.addAction("org.codeaurora.intent.action.ACTION_SUBSCRIPTION_SET_UICC_RESULT");
+        this.mContext.registerReceiver(this.mReceiver, filter);
+        logd("Constructor - Exit");
     }
 
-    private boolean isAnyCmdFailed() {
-        int i = 0;
-        boolean z = false;
-        while (true) {
-            int i2 = i;
-            if (i2 >= this.mNumPhones) {
-                return z;
-            }
-            if (this.mCmdFailed[i2]) {
-                z = true;
-            }
-            i = i2 + 1;
+    @Override // android.os.Handler
+    public void handleMessage(Message msg) {
+        switch (msg.what) {
+            case 1:
+                logd("CMD_DEACTIVATE_ALL_SUBS");
+                deactivateAllSubscriptions();
+                return;
+            case 2:
+                AsyncResult ar = (AsyncResult) msg.obj;
+                logd("EVENT_GET_MODEM_CAPS_DONE");
+                onGetModemCapabilityDone(ar, (byte[]) ar.result, ((Integer) ar.userObj).intValue());
+                return;
+            case 3:
+                logd("CMD_TRIGGER_UNBIND");
+                unbindStackOnSub(((Integer) msg.obj).intValue());
+                return;
+            case 4:
+                AsyncResult ar2 = (AsyncResult) msg.obj;
+                logd("EVENT_UNBIND_DONE");
+                onUnbindComplete(ar2, ((Integer) ar2.userObj).intValue());
+                return;
+            case 5:
+                logd("CMD_TRIGGER_BIND");
+                bindStackOnSub(((Integer) msg.obj).intValue());
+                return;
+            case 6:
+                AsyncResult ar3 = (AsyncResult) msg.obj;
+                logd("EVENT_BIND_DONE");
+                onBindComplete(ar3, ((Integer) ar3.userObj).intValue());
+                return;
+            case 7:
+                AsyncResult ar4 = (AsyncResult) msg.obj;
+                logd("EVENT_SET_PREF_MODE_DONE");
+                onSetPrefNwModeDone(ar4, ((Integer) ar4.userObj).intValue());
+                return;
+            case 8:
+                AsyncResult ar5 = (AsyncResult) msg.obj;
+                logd("EVENT_SUB_DEACTIVATED");
+                onSubDeactivated(ar5, ((Integer) ar5.userObj).intValue());
+                return;
+            case 9:
+                AsyncResult ar6 = (AsyncResult) msg.obj;
+                logd("EVENT_RADIO_AVAILABLE");
+                processRadioAvailable(ar6, ((Integer) ar6.userObj).intValue());
+                return;
+            case 10:
+                AsyncResult ar7 = (AsyncResult) msg.obj;
+                logd("EVENT_MODEM_CAPABILITY_CHANGED ar =" + ar7);
+                onUnsolModemCapabilityChanged(ar7);
+                return;
+            case 11:
+                AsyncResult ar8 = (AsyncResult) msg.obj;
+                Integer phoneId = (Integer) ar8.userObj;
+                logd("EVENT_RADIO_NOT_AVAILABLE, phoneId = " + phoneId);
+                processRadioNotAvailable(ar8, phoneId.intValue());
+                return;
+            default:
+                return;
         }
     }
 
-    private void logd(String str) {
-        Rlog.d(LOG_TAG, str);
-    }
-
-    private void loge(String str) {
-        Rlog.e(LOG_TAG, str);
-    }
-
-    public static ModemStackController make(Context context, UiccController uiccController, CommandsInterface[] commandsInterfaceArr) {
-        Rlog.d(LOG_TAG, "getInstance");
-        if (sModemStackController == null) {
-            sModemStackController = new ModemStackController(context, uiccController, commandsInterfaceArr);
-            return sModemStackController;
-        }
-        throw new RuntimeException("ModemStackController.make() should only be called once");
-    }
-
-    private void notifyModemDataCapabilitiesAvailable() {
-        logd("notifyGetDataCapabilitiesDone");
-        this.mModemDataCapsAvailableRegistrants.notifyRegistrants();
-    }
-
-    private void notifyModemRatCapabilitiesAvailable() {
-        logd("notifyGetRatCapabilitiesDone: Got RAT capabilities for all Stacks!!!");
-        this.mModemRatCapabilitiesAvailable = true;
-        this.mModemRatCapsAvailableRegistrants.notifyRegistrants();
-    }
-
-    private void notifyStackReady(boolean z) {
-        int i = 0;
-        logd("notifyStackReady: Stack is READY!!!");
-        this.mIsRecoveryInProgress = false;
-        this.mIsStackReady = true;
-        resetSubStates();
-        if (z) {
-            while (i < this.mNumPhones) {
-                this.mCurrentStackId[i] = this.mPreferredStackId[i];
-                i++;
-            }
-        }
-        this.mStackReadyRegistrants.notifyRegistrants();
-    }
-
-    private void onBindComplete(AsyncResult asyncResult, int i) {
-        if (asyncResult.exception instanceof CommandException) {
-            this.mCmdFailed[i] = true;
-            loge("onBindComplete(" + i + "): got Exception =" + asyncResult.exception);
-        }
-        this.mSubState[i] = 5;
-        if (!areAllSubsinSameState(5)) {
-            return;
-        }
-        if (isAnyCmdFailed()) {
-            recoverToPrevState();
-        } else {
-            setPrefNwTypeOnAllSubs();
-        }
-    }
-
-    private void onGetModemCapabilityDone(AsyncResult asyncResult, byte[] bArr, int i) {
-        if (bArr == null && (asyncResult.exception instanceof CommandException)) {
-            loge("onGetModemCapabilityDone: EXIT!, result null or Exception =" + asyncResult.exception);
-            notifyStackReady(false);
-            return;
-        }
-        logd("onGetModemCapabilityDone on phoneId[" + i + "] result = " + bArr);
-        if (i < 0 || i >= this.mNumPhones) {
+    private void processRadioAvailable(AsyncResult ar, int phoneId) {
+        logd("processRadioAvailable on phoneId = " + phoneId);
+        if (phoneId < 0 || phoneId >= this.mNumPhones) {
             loge("Invalid Index!!!");
             return;
         }
-        this.mSubState[i] = 2;
-        parseGetModemCapabilityResponse(bArr, i);
-        if (areAllModemCapInfoReceived()) {
-            notifyModemRatCapabilitiesAvailable();
+        this.mCi[phoneId].getModemCapability(Message.obtain(this, 2, new Integer(phoneId)));
+    }
+
+    private void processRadioNotAvailable(AsyncResult ar, int phoneId) {
+        logd("processRadioNotAvailable on phoneId = " + phoneId);
+        if (phoneId < 0 || phoneId >= this.mNumPhones) {
+            loge("Invalid Index!!!");
+        } else {
+            this.mModemCapInfo[this.mCurrentStackId[phoneId]] = null;
         }
     }
 
-    private void onSetPrefNwModeDone(AsyncResult asyncResult, int i) {
-        if (asyncResult.exception instanceof CommandException) {
-            this.mCmdFailed[i] = true;
-            loge("onSetPrefNwModeDone(SUB:" + i + "): got Exception =" + asyncResult.exception);
-        }
-        this.mSubState[i] = 7;
-        if (!areAllSubsinSameState(7)) {
+    private void onGetModemCapabilityDone(AsyncResult ar, byte[] result, int phoneId) {
+        if (result != null || !(ar.exception instanceof CommandException)) {
+            logd("onGetModemCapabilityDone on phoneId[" + phoneId + "] result = " + result);
+            if (phoneId < 0 || phoneId >= this.mNumPhones) {
+                loge("Invalid Index!!!");
+                return;
+            }
+            this.mSubState[phoneId] = 2;
+            parseGetModemCapabilityResponse(result, phoneId);
+            if (areAllModemCapInfoReceived()) {
+                notifyModemRatCapabilitiesAvailable();
+                return;
+            }
             return;
         }
-        if (isAnyCmdFailed()) {
-            recoverToPrevState();
-            return;
-        }
-        if (this.mUpdateStackMsg != null) {
-            sendResponseToTarget(this.mUpdateStackMsg, 0);
-            this.mUpdateStackMsg = null;
-        }
-        updateNetworkSelectionMode();
-        notifyStackReady(true);
+        loge("onGetModemCapabilityDone: EXIT!, result null or Exception =" + ar.exception);
+        notifyStackReady(false);
     }
 
-    private void onSubDeactivated(AsyncResult asyncResult, int i) {
-        SubscriptionStatus subscriptionStatus = (SubscriptionStatus) asyncResult.result;
-        if (subscriptionStatus == null || !(subscriptionStatus == null || SubscriptionStatus.SUB_DEACTIVATED == subscriptionStatus)) {
-            loge("onSubDeactivated on phoneId[" + i + "] Failed!!!");
-            this.mCmdFailed[i] = true;
+    private void onUnsolModemCapabilityChanged(AsyncResult ar) {
+        logd("onUnsolModemCapabilityChanged");
+        RIL.UnsolOemHookBuffer unsolOemHookBuffer = (RIL.UnsolOemHookBuffer) ar.result;
+        if (unsolOemHookBuffer != null || !(ar.exception instanceof CommandException)) {
+            int phoneId = unsolOemHookBuffer.getRilInstance();
+            logd("onUnsolModemCapabilityChanged on phoneId = " + phoneId);
+            parseGetModemCapabilityResponse(unsolOemHookBuffer.getUnsolOemHookBuffer(), phoneId);
+            notifyModemDataCapabilitiesAvailable();
+            return;
         }
-        logd("onSubDeactivated on phoneId[" + i + "] subStatus = " + subscriptionStatus);
-        if (this.mSubState[i] != 3) {
-            this.mSubState[i] = 3;
+        loge("onUnsolModemCapabilityChanged: EXIT!, result null or Exception =" + ar.exception);
+    }
+
+    private void onSubDeactivated(AsyncResult ar, int phoneId) {
+        SubscriptionStatus subStatus = (SubscriptionStatus) ar.result;
+        if (subStatus == null || !(subStatus == null || SubscriptionStatus.SUB_DEACTIVATED == subStatus)) {
+            loge("onSubDeactivated on phoneId[" + phoneId + "] Failed!!!");
+            this.mCmdFailed[phoneId] = true;
+        }
+        logd("onSubDeactivated on phoneId[" + phoneId + "] subStatus = " + subStatus);
+        if (this.mSubState[phoneId] != 3) {
+            this.mSubState[phoneId] = 3;
             this.mDeactivedSubCount++;
             if (this.mDeactivedSubCount != this.mActiveSubCount) {
                 return;
@@ -387,12 +334,22 @@ public class ModemStackController extends Handler {
         }
     }
 
-    private void onUnbindComplete(AsyncResult asyncResult, int i) {
-        if (asyncResult.exception instanceof CommandException) {
-            this.mCmdFailed[i] = true;
-            loge("onUnbindComplete(" + i + "): got Exception =" + asyncResult.exception);
+    private void bindStackOnSub(int phoneId) {
+        logd("bindStack " + this.mPreferredStackId[phoneId] + " On phoneId[" + phoneId + "]");
+        this.mCi[phoneId].updateStackBinding(this.mPreferredStackId[phoneId], 1, Message.obtain(this, 6, new Integer(phoneId)));
+    }
+
+    private void unbindStackOnSub(int phoneId) {
+        logd("unbindStack " + this.mCurrentStackId[phoneId] + " On phoneId[" + phoneId + "]");
+        this.mCi[phoneId].updateStackBinding(this.mCurrentStackId[phoneId], 0, Message.obtain(this, 4, new Integer(phoneId)));
+    }
+
+    private void onUnbindComplete(AsyncResult ar, int phoneId) {
+        if (ar.exception instanceof CommandException) {
+            this.mCmdFailed[phoneId] = true;
+            loge("onUnbindComplete(" + phoneId + "): got Exception =" + ar.exception);
         }
-        this.mSubState[i] = 4;
+        this.mSubState[phoneId] = 4;
         if (!areAllSubsinSameState(4)) {
             return;
         }
@@ -403,103 +360,53 @@ public class ModemStackController extends Handler {
         }
     }
 
-    private void onUnsolModemCapabilityChanged(AsyncResult asyncResult) {
-        logd("onUnsolModemCapabilityChanged");
-        UnsolOemHookBuffer unsolOemHookBuffer = (UnsolOemHookBuffer) asyncResult.result;
-        if (unsolOemHookBuffer == null && (asyncResult.exception instanceof CommandException)) {
-            loge("onUnsolModemCapabilityChanged: EXIT!, result null or Exception =" + asyncResult.exception);
+    private void onBindComplete(AsyncResult ar, int phoneId) {
+        if (ar.exception instanceof CommandException) {
+            this.mCmdFailed[phoneId] = true;
+            loge("onBindComplete(" + phoneId + "): got Exception =" + ar.exception);
+        }
+        this.mSubState[phoneId] = 5;
+        if (!areAllSubsinSameState(5)) {
             return;
         }
-        byte[] unsolOemHookBuffer2 = unsolOemHookBuffer.getUnsolOemHookBuffer();
-        int rilInstance = unsolOemHookBuffer.getRilInstance();
-        logd("onUnsolModemCapabilityChanged on phoneId = " + rilInstance);
-        parseGetModemCapabilityResponse(unsolOemHookBuffer2, rilInstance);
-        notifyModemDataCapabilitiesAvailable();
-    }
-
-    private void parseGetModemCapabilityResponse(byte[] bArr, int i) {
-        if (bArr.length != 7) {
-            loge("parseGetModemCapabilityResponse: EXIT!, result length(" + bArr.length + ") and Expected length(" + 7 + ") not matching.");
-            return;
-        }
-        logd("parseGetModemCapabilityResponse: buffer = " + IccUtils.bytesToHexString(bArr));
-        ByteBuffer wrap = ByteBuffer.wrap(bArr);
-        wrap.order(ByteOrder.nativeOrder());
-        byte b = wrap.get();
-        if (b < (byte) 0 || b >= this.mNumPhones) {
-            loge("Invalid Index!!!");
-            return;
-        }
-        updateModemCapInfo(i, b, wrap.getInt(), wrap.get(), wrap.get());
-    }
-
-    private void processRadioAvailable(AsyncResult asyncResult, int i) {
-        logd("processRadioAvailable on phoneId = " + i);
-        if (i < 0 || i >= this.mNumPhones) {
-            loge("Invalid Index!!!");
-            return;
-        }
-        this.mCi[i].getModemCapability(Message.obtain(this, 2, new Integer(i)));
-    }
-
-    private void processRadioNotAvailable(AsyncResult asyncResult, int i) {
-        logd("processRadioNotAvailable on phoneId = " + i);
-        if (i < 0 || i >= this.mNumPhones) {
-            loge("Invalid Index!!!");
+        if (isAnyCmdFailed()) {
+            recoverToPrevState();
         } else {
-            this.mModemCapInfo[this.mCurrentStackId[i]] = null;
+            setPrefNwTypeOnAllSubs();
         }
     }
 
-    private void recoverToPrevState() {
-        int i = 0;
-        if (this.mIsRecoveryInProgress) {
-            if (this.mUpdateStackMsg != null) {
-                sendResponseToTarget(this.mUpdateStackMsg, 2);
-                this.mUpdateStackMsg = null;
-            }
-            this.mIsRecoveryInProgress = false;
-            if (7 == this.mSubState[0]) {
-                notifyStackReady(true);
-                return;
-            }
+    private void onSetPrefNwModeDone(AsyncResult ar, int phoneId) {
+        if (ar.exception instanceof CommandException) {
+            this.mCmdFailed[phoneId] = true;
+            loge("onSetPrefNwModeDone(SUB:" + phoneId + "): got Exception =" + ar.exception);
+        }
+        this.mSubState[phoneId] = 7;
+        if (!areAllSubsinSameState(7)) {
             return;
         }
-        this.mIsRecoveryInProgress = true;
-        while (i < this.mNumPhones) {
-            this.mPreferredStackId[i] = this.mCurrentStackId[i];
-            i++;
+        if (isAnyCmdFailed()) {
+            recoverToPrevState();
+            return;
         }
-        triggerUnBindingOnAllSubs();
+        if (this.mUpdateStackMsg != null) {
+            sendResponseToTarget(this.mUpdateStackMsg, 0);
+            this.mUpdateStackMsg = null;
+        }
+        updateNetworkSelectionMode();
+        notifyStackReady(true);
     }
 
-    private void resetSubStates() {
+    private void updateNetworkSelectionMode() {
         for (int i = 0; i < this.mNumPhones; i++) {
-            this.mSubState[i] = 1;
-            this.mCmdFailed[i] = false;
+            this.mCi[i].setNetworkSelectionModeAutomatic(null);
         }
     }
 
-    private void sendResponseToTarget(Message message, int i) {
-        AsyncResult.forMessage(message, null, CommandException.fromRilErrno(i));
-        message.sendToTarget();
-    }
-
-    private void setPrefNwTypeOnAllSubs() {
+    private void triggerUnBindingOnAllSubs() {
         resetSubStates();
         for (int i = 0; i < this.mNumPhones; i++) {
-            this.mCi[i].setPreferredNetworkType(this.mPrefNwMode[i], obtainMessage(7, new Integer(i)));
-        }
-    }
-
-    private void syncPreferredNwModeFromDB() {
-        for (int i = 0; i < this.mNumPhones; i++) {
-            try {
-                this.mPrefNwMode[i] = TelephonyManager.getIntAtIndex(this.mContext.getContentResolver(), "preferred_network_mode", i);
-            } catch (SettingNotFoundException e) {
-                loge("getPreferredNetworkMode: Could not find PREFERRED_NETWORK_MODE!!!");
-                this.mPrefNwMode[i] = Phone.PREFERRED_NT_MODE;
-            }
+            sendMessage(obtainMessage(3, new Integer(i)));
         }
     }
 
@@ -515,50 +422,114 @@ public class ModemStackController extends Handler {
         sendMessage(obtainMessage(1));
     }
 
-    private void triggerUnBindingOnAllSubs() {
+    private void setPrefNwTypeOnAllSubs() {
         resetSubStates();
         for (int i = 0; i < this.mNumPhones; i++) {
-            sendMessage(obtainMessage(3, new Integer(i)));
+            this.mCi[i].setPreferredNetworkType(this.mPrefNwMode[i], obtainMessage(7, new Integer(i)));
         }
     }
 
-    private void unbindStackOnSub(int i) {
-        logd("unbindStack " + this.mCurrentStackId[i] + " On phoneId[" + i + "]");
-        this.mCi[i].updateStackBinding(this.mCurrentStackId[i], 0, Message.obtain(this, 4, new Integer(i)));
+    private boolean areAllSubsinSameState(int state) {
+        int[] arr$ = this.mSubState;
+        for (int subState : arr$) {
+            logd("areAllSubsinSameState state= " + state + " substate=" + subState);
+            if (subState != state) {
+                return false;
+            }
+        }
+        return true;
     }
 
-    private void updateModemCapInfo(int i, int i2, int i3, int i4, int i5) {
-        this.mCurrentStackId[i] = i2;
-        this.mModemCapInfo[this.mCurrentStackId[i]] = new ModemCapabilityInfo(this.mCurrentStackId[i], i3, i4, i5);
-        logd("updateModemCapInfo: ModemCaps[" + i + "]" + this.mModemCapInfo[this.mCurrentStackId[i]]);
-    }
-
-    private void updateNetworkSelectionMode() {
+    private boolean areAllModemCapInfoReceived() {
         for (int i = 0; i < this.mNumPhones; i++) {
-            this.mCi[i].setNetworkSelectionModeAutomatic(null);
+            if (this.mModemCapInfo[this.mCurrentStackId[i]] == null) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private void resetSubStates() {
+        for (int i = 0; i < this.mNumPhones; i++) {
+            this.mSubState[i] = 1;
+            this.mCmdFailed[i] = false;
         }
     }
 
-    public int getCurrentStackIdForPhoneId(int i) {
-        return this.mCurrentStackId[i];
+    private boolean isAnyCmdFailed() {
+        boolean result = false;
+        for (int i = 0; i < this.mNumPhones; i++) {
+            if (this.mCmdFailed[i]) {
+                result = true;
+            }
+        }
+        return result;
+    }
+
+    private void updateModemCapInfo(int phoneId, int stackId, int supportedRatBitMask, int voiceDataCap, int maxDataCap) {
+        this.mCurrentStackId[phoneId] = stackId;
+        this.mModemCapInfo[this.mCurrentStackId[phoneId]] = new ModemCapabilityInfo(this.mCurrentStackId[phoneId], supportedRatBitMask, voiceDataCap, maxDataCap);
+        logd("updateModemCapInfo: ModemCaps[" + phoneId + "]" + this.mModemCapInfo[this.mCurrentStackId[phoneId]]);
+    }
+
+    private void parseGetModemCapabilityResponse(byte[] result, int phoneId) {
+        if (result.length != 7) {
+            loge("parseGetModemCapabilityResponse: EXIT!, result length(" + result.length + ") and Expected length(7) not matching.");
+            return;
+        }
+        logd("parseGetModemCapabilityResponse: buffer = " + IccUtils.bytesToHexString(result));
+        ByteBuffer respBuffer = ByteBuffer.wrap(result);
+        respBuffer.order(ByteOrder.nativeOrder());
+        int stackId = respBuffer.get();
+        if (stackId < 0 || stackId >= this.mNumPhones) {
+            loge("Invalid Index!!!");
+        } else {
+            updateModemCapInfo(phoneId, stackId, respBuffer.getInt(), respBuffer.get(), respBuffer.get());
+        }
+    }
+
+    private void syncPreferredNwModeFromDB() {
+        for (int i = 0; i < this.mNumPhones; i++) {
+            try {
+                this.mPrefNwMode[i] = TelephonyManager.getIntAtIndex(this.mContext.getContentResolver(), "preferred_network_mode", i);
+            } catch (Settings.SettingNotFoundException e) {
+                loge("getPreferredNetworkMode: Could not find PREFERRED_NETWORK_MODE!!!");
+                this.mPrefNwMode[i] = Phone.PREFERRED_NT_MODE;
+            }
+        }
+    }
+
+    private boolean isAnyCallsInProgress() {
+        for (int i = 0; i < this.mNumPhones; i++) {
+            if (TelephonyManager.getDefault().getCallState(SubscriptionController.getInstance().getSubIdUsingPhoneId(i)) != 0) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    public boolean isStackReady() {
+        return this.mIsStackReady;
     }
 
     public int getMaxDataAllowed() {
-        int i;
         logd("getMaxDataAllowed");
-        ArrayList arrayList = new ArrayList();
-        for (i = 0; i < this.mNumPhones; i++) {
+        List<Integer> unsortedList = new ArrayList<>();
+        for (int i = 0; i < this.mNumPhones; i++) {
             if (this.mModemCapInfo[i] != null) {
-                arrayList.add(Integer.valueOf(this.mModemCapInfo[i].getMaxDataCap()));
+                unsortedList.add(Integer.valueOf(this.mModemCapInfo[i].getMaxDataCap()));
             }
         }
-        Collections.sort(arrayList);
-        i = arrayList.size();
-        return i > 0 ? ((Integer) arrayList.get(i - 1)).intValue() : 1;
+        Collections.sort(unsortedList);
+        int listSize = unsortedList.size();
+        if (listSize > 0) {
+            return unsortedList.get(listSize - 1).intValue();
+        }
+        return 1;
     }
 
-    public ModemCapabilityInfo getModemRatCapsForPhoneId(int i) {
-        return this.mModemCapInfo[this.mCurrentStackId[i]];
+    public int getCurrentStackIdForPhoneId(int phoneId) {
+        return this.mCurrentStackId[phoneId];
     }
 
     public int getPrimarySub() {
@@ -570,146 +541,170 @@ public class ModemStackController extends Handler {
         return 0;
     }
 
-    public void handleMessage(Message message) {
-        AsyncResult asyncResult;
-        Integer num;
-        Integer num2;
-        switch (message.what) {
-            case 1:
-                logd("CMD_DEACTIVATE_ALL_SUBS");
-                deactivateAllSubscriptions();
-                return;
-            case 2:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_GET_MODEM_CAPS_DONE");
-                onGetModemCapabilityDone(asyncResult, (byte[]) asyncResult.result, num.intValue());
-                return;
-            case 3:
-                num2 = (Integer) message.obj;
-                logd("CMD_TRIGGER_UNBIND");
-                unbindStackOnSub(num2.intValue());
-                return;
-            case 4:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_UNBIND_DONE");
-                onUnbindComplete(asyncResult, num.intValue());
-                return;
-            case 5:
-                num2 = (Integer) message.obj;
-                logd("CMD_TRIGGER_BIND");
-                bindStackOnSub(num2.intValue());
-                return;
-            case 6:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_BIND_DONE");
-                onBindComplete(asyncResult, num.intValue());
-                return;
-            case 7:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_SET_PREF_MODE_DONE");
-                onSetPrefNwModeDone(asyncResult, num.intValue());
-                return;
-            case 8:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_SUB_DEACTIVATED");
-                onSubDeactivated(asyncResult, num.intValue());
-                return;
-            case 9:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_RADIO_AVAILABLE");
-                processRadioAvailable(asyncResult, num.intValue());
-                return;
-            case 10:
-                asyncResult = (AsyncResult) message.obj;
-                logd("EVENT_MODEM_CAPABILITY_CHANGED ar =" + asyncResult);
-                onUnsolModemCapabilityChanged(asyncResult);
-                return;
-            case 11:
-                asyncResult = (AsyncResult) message.obj;
-                num = (Integer) asyncResult.userObj;
-                logd("EVENT_RADIO_NOT_AVAILABLE, phoneId = " + num);
-                processRadioNotAvailable(asyncResult, num.intValue());
-                return;
-            default:
-                return;
-        }
+    public ModemCapabilityInfo getModemRatCapsForPhoneId(int phoneId) {
+        return this.mModemCapInfo[this.mCurrentStackId[phoneId]];
     }
 
-    public boolean isStackReady() {
-        return this.mIsStackReady;
-    }
-
-    public void registerForModemDataCapsUpdate(Handler handler, int i, Object obj) {
-        Registrant registrant = new Registrant(handler, i, obj);
-        synchronized (this.mModemDataCapsAvailableRegistrants) {
-            this.mModemDataCapsAvailableRegistrants.add(registrant);
-        }
-    }
-
-    public void registerForModemRatCapsAvailable(Handler handler, int i, Object obj) {
-        Registrant registrant = new Registrant(handler, i, obj);
-        if (this.mModemRatCapabilitiesAvailable) {
-            registrant.notifyRegistrant();
-        }
-        synchronized (this.mModemRatCapsAvailableRegistrants) {
-            this.mModemRatCapsAvailableRegistrants.add(registrant);
-        }
-    }
-
-    public void registerForStackReady(Handler handler, int i, Object obj) {
-        Registrant registrant = new Registrant(handler, i, obj);
-        if (this.mIsStackReady) {
-            registrant.notifyRegistrant();
-        }
-        synchronized (this.mStackReadyRegistrants) {
-            this.mStackReadyRegistrants.add(registrant);
-        }
-    }
-
-    public int updateStackBinding(int[] iArr, boolean z, Message message) {
-        boolean isAnyCallsInProgress = isAnyCallsInProgress();
+    public int updateStackBinding(int[] prefStackIds, boolean isBootUp, Message msg) {
+        boolean isFlexmapDisabled;
+        boolean isUpdateRequired = false;
+        boolean callInProgress = isAnyCallsInProgress();
         if (this.mNumPhones == 1) {
             loge("No need to update Stack Binding in case of Single Sim.");
             return 0;
         }
-        boolean z2 = SystemProperties.getInt("persist.radio.disable_flexmap", 0) == 1;
-        if (isAnyCallsInProgress || this.mIsPhoneInEcbmMode || !(this.mIsStackReady || z)) {
-            loge("updateStackBinding: Calls is progress = " + isAnyCallsInProgress + ", mIsPhoneInEcbmMode = " + this.mIsPhoneInEcbmMode + ", mIsStackReady = " + this.mIsStackReady + ". So EXITING!!!");
+        if (SystemProperties.getInt("persist.radio.disable_flexmap", 0) == 1) {
+            isFlexmapDisabled = true;
+        } else {
+            isFlexmapDisabled = false;
+        }
+        if (callInProgress || this.mIsPhoneInEcbmMode || (!this.mIsStackReady && !isBootUp)) {
+            loge("updateStackBinding: Calls is progress = " + callInProgress + ", mIsPhoneInEcbmMode = " + this.mIsPhoneInEcbmMode + ", mIsStackReady = " + this.mIsStackReady + ". So EXITING!!!");
             return 0;
         }
-        int i;
-        for (i = 0; i < this.mNumPhones; i++) {
-            this.mPreferredStackId[i] = iArr[i];
+        for (int i = 0; i < this.mNumPhones; i++) {
+            this.mPreferredStackId[i] = prefStackIds[i];
         }
-        for (i = 0; i < this.mNumPhones; i++) {
-            if (this.mPreferredStackId[i] != this.mCurrentStackId[i]) {
-                i = 1;
+        int i2 = 0;
+        while (true) {
+            if (i2 >= this.mNumPhones) {
                 break;
+            } else if (this.mPreferredStackId[i2] != this.mCurrentStackId[i2]) {
+                isUpdateRequired = true;
+                break;
+            } else {
+                i2++;
             }
         }
-        i = 0;
-        if (z2 || r0 == 0) {
-            loge("updateStackBinding: FlexMap Disabled : " + z2);
-            if (!z) {
+        if (isFlexmapDisabled || !isUpdateRequired) {
+            loge("updateStackBinding: FlexMap Disabled : " + isFlexmapDisabled);
+            if (!isBootUp) {
                 return 0;
             }
             notifyStackReady(false);
             return 0;
         }
         this.mIsStackReady = false;
-        this.mUpdateStackMsg = message;
+        this.mUpdateStackMsg = msg;
         syncPreferredNwModeFromDB();
-        if (z) {
+        if (isBootUp) {
             triggerUnBindingOnAllSubs();
         } else {
             triggerDeactivationOnAllSubs();
         }
         return 1;
+    }
+
+    private void deactivateAllSubscriptions() {
+        SubscriptionController subCtrlr = SubscriptionController.getInstance();
+        List<SubscriptionInfo> subInfoList = subCtrlr.getActiveSubscriptionInfoList();
+        this.mActiveSubCount = 0;
+        if (subInfoList == null) {
+            if (this.mUpdateStackMsg != null) {
+                sendResponseToTarget(this.mUpdateStackMsg, 2);
+                this.mUpdateStackMsg = null;
+            }
+            notifyStackReady(false);
+            return;
+        }
+        for (SubscriptionInfo subInfo : subInfoList) {
+            int subStatus = subCtrlr.getSubState(subInfo.getSubscriptionId());
+            if (subStatus == 1) {
+                this.mActiveSubCount++;
+                subCtrlr.deactivateSubId(subInfo.getSubscriptionId());
+            }
+            this.mSubcriptionStatus.put(Integer.valueOf(subInfo.getSimSlotIndex()), Integer.valueOf(subStatus));
+        }
+        if (this.mActiveSubCount > 0) {
+            this.mDeactivedSubCount = 0;
+            this.mDeactivationInProgress = true;
+            return;
+        }
+        this.mDeactivationInProgress = false;
+        triggerUnBindingOnAllSubs();
+    }
+
+    private void notifyStackReady(boolean isCrossMapDone) {
+        logd("notifyStackReady: Stack is READY!!!");
+        this.mIsRecoveryInProgress = false;
+        this.mIsStackReady = true;
+        resetSubStates();
+        if (isCrossMapDone) {
+            for (int i = 0; i < this.mNumPhones; i++) {
+                this.mCurrentStackId[i] = this.mPreferredStackId[i];
+            }
+        }
+        this.mStackReadyRegistrants.notifyRegistrants();
+    }
+
+    public void registerForStackReady(Handler h, int what, Object obj) {
+        Registrant r = new Registrant(h, what, obj);
+        if (this.mIsStackReady) {
+            r.notifyRegistrant();
+        }
+        synchronized (this.mStackReadyRegistrants) {
+            this.mStackReadyRegistrants.add(r);
+        }
+    }
+
+    private void notifyModemRatCapabilitiesAvailable() {
+        logd("notifyGetRatCapabilitiesDone: Got RAT capabilities for all Stacks!!!");
+        this.mModemRatCapabilitiesAvailable = true;
+        this.mModemRatCapsAvailableRegistrants.notifyRegistrants();
+    }
+
+    private void notifyModemDataCapabilitiesAvailable() {
+        logd("notifyGetDataCapabilitiesDone");
+        this.mModemDataCapsAvailableRegistrants.notifyRegistrants();
+    }
+
+    public void registerForModemRatCapsAvailable(Handler h, int what, Object obj) {
+        Registrant r = new Registrant(h, what, obj);
+        if (this.mModemRatCapabilitiesAvailable) {
+            r.notifyRegistrant();
+        }
+        synchronized (this.mModemRatCapsAvailableRegistrants) {
+            this.mModemRatCapsAvailableRegistrants.add(r);
+        }
+    }
+
+    public void registerForModemDataCapsUpdate(Handler h, int what, Object obj) {
+        Registrant r = new Registrant(h, what, obj);
+        synchronized (this.mModemDataCapsAvailableRegistrants) {
+            this.mModemDataCapsAvailableRegistrants.add(r);
+        }
+    }
+
+    private void recoverToPrevState() {
+        if (this.mIsRecoveryInProgress) {
+            if (this.mUpdateStackMsg != null) {
+                sendResponseToTarget(this.mUpdateStackMsg, 2);
+                this.mUpdateStackMsg = null;
+            }
+            this.mIsRecoveryInProgress = false;
+            if (7 == this.mSubState[0]) {
+                notifyStackReady(true);
+                return;
+            }
+            return;
+        }
+        this.mIsRecoveryInProgress = true;
+        for (int i = 0; i < this.mNumPhones; i++) {
+            this.mPreferredStackId[i] = this.mCurrentStackId[i];
+        }
+        triggerUnBindingOnAllSubs();
+    }
+
+    private void sendResponseToTarget(Message response, int responseCode) {
+        AsyncResult.forMessage(response, (Object) null, CommandException.fromRilErrno(responseCode));
+        response.sendToTarget();
+    }
+
+    public void logd(String string) {
+        Rlog.d(LOG_TAG, string);
+    }
+
+    private void loge(String string) {
+        Rlog.e(LOG_TAG, string);
     }
 }
